Add league list route
