# src/config/openApiDocument.json
@@ -186,6 +186,32 @@
                         "description": "Invalid league schema"
                     }
                 }
+            },
+            "get": {
+                "tags": ["League"],
+                "summary": "Get all leagues IDs",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema":{
+                                    "type": "object",
+                                    "properties": {
+                                        "leagues": {
+                                            "type": "array",
+                                            "items":{
+                                                "type": "string",
+                                                "example": "abc123"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/league/{leagueId}": {
